# diffeqzoo

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  makefile  mkdocs.yml  pyproject.toml  setup.cfg
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yaml  dev.yml  python-publish.yaml
diffeqzoo/: __init__.py  _vector_fields.py  bvps.py  ivps.py  transform.py  vector_fields.py
diffeqzoo/ivps/: __init__.py  _chaos.py  _epidem.py  _ivp.py  _ivps.py  _misc.py  _nbody.py  _oscillators.py  _pde.py  _reactions.py
docs/: api.md  installation.md  requirements-sphinx-build.txt
docs/api_docs/: initial_value_problems.md
docs/dev_docs/: _deploying.md  contributing.md  dependency_management.md  dev_setup.md  documentation.md  notebooks.md  open_a_pr.md
docs/example_notebooks/: solve_ivp_with_diffrax.ipynb  solve_ivp_with_diffrax.md  solve_ivp_with_scipy.ipynb  solve_ivp_with_scipy.md  solve_ivp_with_scipy.py
docs/quickstart/: installation.md  usage.md
docs/source/: conf.py  index.rst
docs/source/api_documentation/: diffeqzoo.bvps.rst  diffeqzoo.ivps.rst  diffeqzoo.rst  diffeqzoo.transform.rst  diffeqzoo.vector_fields.rst  odezoo.bvps.rst  odezoo.convert.rst  odezoo.ivps.rst  odezoo.rst  odezoo.transform.rst  odezoo.vector_fields.rst
docs/source/dev_documentation/: add_new_notebook.md  ci.md  contribution.md  design_choices.md  implement_new_ode.md
docs/source/example_notebooks/: solve_bvp_with_scipy.ipynb  solve_bvp_with_scipy.md  solve_ivp_with_diffrax.md  solve_ivp_with_jax.md  solve_ivp_with_jax_ode.md  solve_ivp_with_scipy.md
docs/source/getting_started/: examples.md  installation.md  rationale.md  rationale.rst
odezoo/: __init__.py  _descriptions.py  _docstring_utils.py  _vector_fields.py  _version.py  bvps.py  convert.py  ivp.py  ivps.py  transform.py  vector_fields.py
tests/: __init__.py  test_bvps.py  test_convert.py  test_ivp.py  test_ivps.py  test_odezoo.py
