[tool]
[tool.poetry]
name = "odezoo"
version = "0.0.2"
homepage = "https://github.com/pnkraemer/odezoo"
description = "Ordinary differential equation problem definitions."
authors = ["Nicholas Krämer <pnkraemer@duck.com>"]
readme = "README.md"
license =  "MIT"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
]
packages = [
    { include = "odezoo" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"

black  = {version = "^22.8.0", optional = true}
isort  = { version = "^5.8.0", optional = true}
flake8  = { version = "^3.9.2", optional = true}
flake8-docstrings = { version = "^1.6.0", optional = true }
pytest  = { version = "^6.2.4", optional = true}
pytest-cov  = { version = "^2.12.0", optional = true}
tox  = { version = "^3.20.1", optional = true}
virtualenv  = { version = "^20.2.2", optional = true}
pip  = { version = "^20.3.1", optional = true}
mkdocs  = {version = "^1.3.1", optional = true}
mkdocs-include-markdown-plugin  = { version = "^1.0.0", optional = true}
mkdocs-material  = {version = "^8.5.3", optional = true}
mkdocs-material-extensions  = {version = "^1.0.3", optional = true}
twine  = { version = "^3.3.0", optional = true}
mkdocs-autorefs = {version = "^0.4.1", optional = true}
pre-commit = {version = "^2.20.0", optional = true}
toml = {version = "^0.10.2", optional = true}
bump2version = {version = "^1.0.1", optional = true}
mkdocstrings = {version = "^0.19.0", optional = true}
mkdocstrings-python = {version = "^0.7.1", optional = true}
pymdown-extensions = {version = "^9.5", optional = true}
pytest-cases = "^3.6.13"
numpy = {version = "^1.23.3", optional = true}
optional = "^0.0.1"
mkdocs-jupyter = {version = "^0.22.0", optional = true}
jupytext = {version = "^1.14.1", optional = true}
jupyter = {version = "^1.0.0", optional = true}
diffrax = {version = "^0.2.1", optional = true}
scipy = {version = "^1.9.1", optional = true}
matplotlib = {version = "^3.6.0", optional = true}
nbqa = {version = "^1.5.1", optional = true}
mkdocs-exclude = {version = "^1.0.2", optional = true}
jax = {extras = ["cpu"], version = "^0.3.20"}

[tool.poetry.extras]

numpy = [
    "numpy"
    ]


test = [
    "pytest",
    "black",
    "isort",
    "flake8",
    "flake8-docstrings",
    "pytest-cov",
    "nbqa",
    "jupytext",
    ]

dev = ["tox", "pre-commit", "virtualenv", "pip", "twine", "toml", "bump2version"]

doc = [
    "mkdocs",
    "mkdocs-include-markdown-plugin",
    "mkdocs-material",
    "mkdocs-exclude",
    "mkdocstrings",
    "mkdocstrings-python",
    "mkdocs-material-extension",
    "mkdocs-autorefs",
    "mkdocs-jupyter",
    "jupytext",
    "jupyter",
    ]

execute-examples = [
    "scipy",
    "diffrax",
    "matplotlib",
]

[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
skip_gitignore = true
# you can skip files as below
#skip_glob = docs/conf.py

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
