[metadata]
name = odezoo
description = Ordinary differential equation zoo
author = Nicholas Krämer
author_email = nicholas.kraemer@uni-tuebingen.de
license = MIT
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.7


[options.extras_require]
ci =
    tox
examples =
    jupyter
