[metadata]
name = odezoo
description = Ordinary differential equation zoo
author = Nicholas Krämer
author_email = nicholas.kraemer@uni-tuebingen.de
license = MIT
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
install_requires =
    jax[cpu]
python_requires = >=3.7


[options.extras_require]
numpy =
    numpy
jax =
    jax[cpu]
tests =
    pytest
    pytest-randomly
    pytest-cases
lint =
    flake8
    isort
    black
examples =
    jupyter
    matplotlib
    scipy
example-lint =
    %(lint)s
    nbqa


[flake8]
max-line-length = 88
extend-ignore = E203

[isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[black]
include = '\.pyi?$'
exclude = '''
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist'''


[pytest.ini_options]
addopts =
    "--verbose"
    "--doctest-modules"
norecursedirs =
    ".*"
    "*.egg*"
    "dist"
    "build"
    ".tox"
testpaths =
    "pnconv"
    "tests"
doctest_optionflags =
    "NUMBER NORMALIZE_WHITESPACE"
filterwarnings =
    # "import jax" implies "import flatbuffers", which raises the following warning.
    # Ignore similar to https://github.com/google/jax/blob/main/pytest.ini
    "ignore:the imp module is deprecated in favour of importlib.*:DeprecationWarning:flatbuffers.*"